--- a/README
+++ b/README
@@ -16,5 +16,4 @@ pattern leading up to a question. There are no penalties
 for wrong answers and the game gets progressively 
 harder only with every few correct responses.
 
-Contains some bugs due to rushing. Many of them I am 
-aware of. Still in progress. Any help is appreciated.
+Contains some bugs due to rushing.
